[package]
name = "mqtiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.23",features=["full"]}
tokio-util={version="0.7.4",features=["full"]}
tokio-stream="0.1"
bytes="1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
ctrlc = "3.2.4"